# frame-pilot

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  README.md  develop_plan.md  implement_goals.md  package-lock.json  package.json  playwright.config.ts
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: embeddings.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/devtools/: __init__.py  derivative_generation_bench.py  performance_smoke.py  quality_scoring_bench.py  synthetic_dataset.py
apps/api/app/image/: scoring.py
apps/api/app/models/: entities.py
apps/api/app/schemas/: api.py
apps/api/app/services/: exporting.py  grouping.py  importing.py  processing.py  projects.py  ranking.py
apps/api/tests/: test_db_session.py  test_derivative_generation_bench.py  test_deterministic_culling_fixtures.py  test_grouping.py  test_import_process_export_api.py  test_large_batch_api.py  test_performance_smoke.py  test_projects_api.py  test_quality_scoring_bench.py  test_ranking_export.py  test_scoring.py  test_synthetic_dataset.py
docs/: api.md  architecture.md  export_interoperability.md  scoring.md  v1_review_for_v2.md  v2_algorithm_strategy.md  v2_architecture.md  v2_current_development_tasks_review.md  v2_development_progress_summary.md  v2_iteration_review.md  v2_known_limitations.md  v2_migration_plan.md  v2_milestones.md  v2_performance_baseline.md  v2_product_requirements.md  v2_rc1_full_code_review.md  v2_rc2_validation_decision.md  (+6 more)
(+72 files in other folders)
